# backend

./: .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  DEVELOP.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: pipeline.yml
addons/maxmind_geoip2/: __init__.py  __manifest__.py
addons/maxmind_geoip2/data/: ir_config_parameter.xml
addons/maxmind_geoip2/mixin/: __init__.py  maxmind_geoip2.py
addons/maxmind_geoip2/tests/: __init__.py  test_mixin_maxmind_geoip.py
addons/maxmind_geoip2/wizards/: inherit_res_config_settings.py  inherit_res_config_settings.xml
addons/pegi/: __manifest__.py
addons/pegi/actions/: age.xml  content.xml
addons/pegi/data/: pegi_age.xml  pegi_content.xml
addons/pegi/models/: __init__.py  (+2 more)
addons/showcases/: __manifest__.py
addons/tournaments/: __init__.py  __manifest__.py
app/: app_version.py  config.py  main.py
app/conf/: __init__.py  application.py  logger.py
app/errors/: __init__.py  api.py  persistence.py  services.py
app/handlers/: __init__.py  api.py  persistence.py  pydantic.py  services.py
app/middlewares/: __init__.py  cors.py  odoo_env.py
app/persistence/: __init__.py  odoo_environment.py
app/schemas/: __init__.py  auth.py  entrant.py  odoo.py  registration.py  res_users.py  tournament_entrant.py
app/services/: __init__.py  entrant.py  jwt.py  pane.py  registration.py  showcase.py  team.py  tournaments.py  user.py
app/workers/: showcase.py
app_tests/: conftest.py
docker/: entrypoint.sh  run.sh
docker/patches/: odoo-remove_upgradable_addons.patch
helm/tournaments-mgmt-backend/: Chart.yaml  values.yaml
src/tournaments_backend/: __main__.py  config.py  instance.py  main.py  version.py
test/: config.yml  conftest.py
update_probe/: main.patch  main.py
(+122 files in other folders)
